Related: fdo#31821 pull tables from otf fonts as well

Change-Id: If3bd4ac640aaf6b68fa4ae2a363f691601ff942b